[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Screens/Final.gd" type="Script" id=1]
[ext_resource path="res://GFX/CutsceneEnd/f10.png" type="Texture" id=2]
[ext_resource path="res://GFX/Font/RPGSystem.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/som_de_botao.ogg" type="AudioStream" id=4]
[ext_resource path="res://GFX/CutsceneEnd/F1.png" type="Texture" id=5]
[ext_resource path="res://GFX/CutsceneEnd/F2.png" type="Texture" id=6]
[ext_resource path="res://GFX/CutsceneEnd/F3.png" type="Texture" id=7]
[ext_resource path="res://GFX/CutsceneEnd/F4.png" type="Texture" id=8]
[ext_resource path="res://GFX/CutsceneEnd/F5.png" type="Texture" id=9]
[ext_resource path="res://GFX/CutsceneEnd/F6.png" type="Texture" id=10]
[ext_resource path="res://GFX/CutsceneEnd/F7.png" type="Texture" id=11]
[ext_resource path="res://GFX/CutsceneEnd/F8.png" type="Texture" id=12]
[ext_resource path="res://GFX/CutsceneEnd/f9.png" type="Texture" id=13]
[ext_resource path="res://GFX/CutsceneEnd/F11.png" type="Texture" id=14]
[ext_resource path="res://GFX/CutsceneEnd/F12.png" type="Texture" id=15]
[ext_resource path="res://GFX/CutsceneEnd/F13.png" type="Texture" id=16]
[ext_resource path="res://GFX/CutsceneEnd/F14.png" type="Texture" id=17]
[ext_resource path="res://SFX/Flash.ogg" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 57.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ButtonExit:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 46.1, 46.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/ButtonExit:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 46.1, 47.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.6, 6.8, 12.2, 14.9, 17.9, 20.5, 23.5, 26, 29, 33.5, 37.3, 40.1, 44 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 30.3, 32.1, 33.6, 35, 38.1, 40.1, 42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 0.241484, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0.305882, 0.305882, 0.305882, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.984314 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 38.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 18 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 38.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Final" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonExit" type="Button" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 601.266
margin_top = 645.219
margin_right = 679.266
margin_bottom = 691.219
custom_fonts/font = SubResource( 2 )
disabled = true
text = "EXIT"
flat = true

[node name="AudioButtonExit" type="AudioStreamPlayer" parent="Control/ButtonExit"]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 0.611112 )

[connection signal="pressed" from="Control/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="finished" from="Control/ButtonExit/AudioButtonExit" to="." method="_on_AudioButtonExit_finished"]
